my first foods web app

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 </head>
 <body>
     <div class="container">
-        <h2 class="appTitle">Cooking Master</h2>
+        <h2 class="appTitle">Welcome to Cooking Master</h2>
 
         <!-- search Bar section -->
         <form class="col-md-5 m-auto py-5">
